DataSource assembly loaded dynamically in web project. Exceptions control included.
